--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-form-select-picker": "0.0.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.19",
     "react-native-vector-icons": "^6.6.0",
