--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "axios": "^0.19.0",
     "native-base": "^2.13.8",
+    "promise-middleware": "^1.0.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-maps": "^0.26.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.19",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "react-navigation-transitions": "^1.0.12"
+    "react-navigation-transitions": "^1.0.12",
+    "redux": "^4.0.4",
+    "redux-promise-axios": "0.0.8"
   },
   "devDependencies": {
     "@babel/core": "7.7.5",
