--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-maps": "^0.26.1",
+    "react-native-paystack-webview": "^2.0.2",
+    "react-native-rave-webview": "^1.0.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.19",
     "react-native-vector-icons": "^6.6.0",
