--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
     "axios": "^0.19.0",
+    "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
     "native-base": "^2.13.8",
+    "npm": "^6.13.4",
     "promise-middleware": "^1.0.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -22,6 +24,7 @@
     "react-native-maps": "^0.26.1",
     "react-native-paystack-webview": "^2.0.2",
     "react-native-rave-webview": "^1.0.0",
+    "react-native-razorpay": "^2.1.31",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.19",
     "react-native-vector-icons": "^6.6.0",
